--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -206,7 +206,8 @@ main.container-main {
   width: 100%;
   height: 3.5%;
   margin: 0 0 3% 0;
-  border: 1px solid #6f6f6f;
+  border: 2px solid #6f6f6f;
+  border-radius: 0.2rem;
 }
 
 .main__article_item2_Posty_input::first-letter {
@@ -219,7 +220,8 @@ main.container-main {
 
 .main__article_item2_Posty_textarea {
   font-size: 1rem;
-  border: 1px solid #6f6f6f;
+  border: 2px solid #6f6f6f;
+  border-radius: 0.2rem;
 }
 
 .main__article_item2_Posty_textarea::placeholder {
@@ -228,7 +230,8 @@ main.container-main {
 
 .main__article_item2_Posty_submit {
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: bold;
+  letter-spacing: 1px;
   border: 2px solid #6f6f6f;
   border-radius: 0.35rem;
   transition: 0.5s ease;
@@ -239,14 +242,18 @@ main.container-main {
   border: 2px solid;
 }
 
+.main__article_item2_Teksty_label {
+  font-size: 2rem;
+}
+
 .main__article_item2_Teksty_select {
   color: #6f6f6f;
-  font-size: 1.0001rem;
+  font-size: 1.1rem;
   border: 2px solid #6f6f6f;
   border-radius: 0.2rem;
   margin: 1% 0 0 0;
-  height: 3%;
-  width: 25%;
+  height: 3.5%;
+  width: 32%;
 }
 
 .main__article_item2_text {
