--- a/PanelAdm/style.scss
+++ b/PanelAdm/style.scss
@@ -77,7 +77,8 @@ main.container-main {
                 width: 100%;
                 height: 3.5%;
                 margin: 0 0 3% 0;
-                border: 1px solid $Gray;
+                border: 2px solid $Gray;
+                border-radius: 0.2rem;
 
                 &::first-letter {
                     text-transform: uppercase;
@@ -85,17 +86,20 @@ main.container-main {
                 &::placeholder {
                     opacity: 0.7;
                 }
-            }
+            } 
+
             &_textarea {
                 font-size: 1rem;
-                border: 1px solid $Gray;
+                border: 2px solid $Gray;
+                border-radius: 0.2rem;
                 &::placeholder {
                     opacity: 0.7;
                 }
             }
             &_submit {
                 font-size: 1.5rem;
-                font-weight: 300;
+                font-weight: bold;
+                letter-spacing: 1px;
                 border: 2px solid $Gray;
                 border-radius: 0.35rem;
                 transition: 0.5s ease;
@@ -108,16 +112,19 @@ main.container-main {
         }
 
         &_Teksty {
+            &_label {
+                font-size: 2rem;
+            }
             &_select {
                 color: $Gray;
-                font-size: 1.0001rem;
+                font-size: 1.1rem;
                 
                 border: 2px solid $Gray;
                 border-radius: 0.2rem;
                 margin: 1% 0 0 0;
 
-                height: 3%;
-                width: 25%;
+                height: 3.5%;
+                width: 32%;
             }
         }
 
@@ -128,7 +135,6 @@ main.container-main {
         }
     }
 }
-
 footer.container {
     display: flex;
     flex-direction: column;
