--- a/Maszyny/style.css
+++ b/Maszyny/style.css
@@ -127,6 +127,55 @@ input.list:hover {
   order: 9;
 }
 
+footer.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 12vh;
+  width: 60%;
+}
+
+footer.container .container__item1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: #0c0b10;
+  border: 1px #7d7d7d solid;
+  background: #d7d7d7;
+  width: 100%;
+  height: 100%;
+}
+
+footer.container .container__item1_logo {
+  margin-left: 20%;
+  opacity: 1;
+}
+
+footer.container .container__item1_text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+  width: 47.5%;
+  font-size: 0.8em;
+  margin-right: 1%;
+}
+
+footer.container .container__item2 {
+  display: flex;
+  width: 100%;
+  height: 3.5vh;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8em;
+  background: #7d7d7d;
+  border: 1px #7d7d7d solid;
+  border-top: none;
+}
+
 body, html {
   background: #f3f3f3;
   height: 100vh;
@@ -190,54 +239,6 @@ main.container-main {
 
 .main__article_item_image {
   margin: 0 2% 0 0;
-}
-
-footer.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 12vh;
-  width: 60%;
-}
-
-footer.container .container__item1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  color: #0c0b10;
-  border: 1px #7d7d7d solid;
-  background: #d7d7d7;
-  width: 100%;
-  height: 100%;
-}
-
-footer.container .container__item1_logo {
-  margin-left: 20%;
-}
-
-footer.container .container__item1_text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 100%;
-  width: 47.5%;
-  font-size: 0.75em;
-  margin-right: 1%;
-}
-
-footer.container .container__item2 {
-  display: flex;
-  width: 100%;
-  height: 3.5vh;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.8em;
-  background: #7d7d7d;
-  border: 1px #7d7d7d solid;
-  border-top: none;
 }
 
 .wrapper {
