--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -24,9 +24,9 @@ main.container-main {
 
 .main__container {
     width: 60%;
-    height: 150vh;
+    height: 110vh;
     display: grid;
-    grid-template: 25rem 70% / 0.2fr 1fr;
+    grid-template: 22.5% 75% / 0.2fr 1fr;
     grid-gap: 2%;
     // padding: 1%;
     background: $lightGray;
@@ -65,58 +65,6 @@ main.container-main {
     margin: 0 0 10% 10%;
     border: 0.2rem solid black;
     background: rgb(55, 55, 180);
-}
-
-footer.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    height: 12vh;
-    width: 60%;
-
-    .container__item1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-
-        color: $Darker;
-        border: 1px $Gray2 solid; 
-        background: $lightGray;
-
-        width: 100%;
-        height: 100%;
-
-        &_logo {
-            margin-left: 20%;
-        }
-        &_text {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
-
-            height: 100%;
-            width: 47.5%;
-            font-size: 0.8em;
-            margin-right: 1%;
-        }
-    }
-    .container__item2 {
-        display: flex;
-        width: 100%;
-        height: 3.5vh;
-        justify-content: center;
-        align-items: center;
-
-        font-size: 0.8em;
-
-        background: $Gray2;
-        border: 1px $Gray2 solid; 
-        border-top: none;
-    }
 }
 
 .wrapper {
