--- a/style.css
+++ b/style.css
@@ -127,6 +127,55 @@ input.list:hover {
   order: 9;
 }
 
+footer.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 12vh;
+  width: 60%;
+}
+
+footer.container .container__item1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: #0c0b10;
+  border: 1px #7d7d7d solid;
+  background: #d7d7d7;
+  width: 100%;
+  height: 100%;
+}
+
+footer.container .container__item1_logo {
+  margin-left: 20%;
+  opacity: 1;
+}
+
+footer.container .container__item1_text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+  width: 47.5%;
+  font-size: 0.8em;
+  margin-right: 1%;
+}
+
+footer.container .container__item2 {
+  display: flex;
+  width: 100%;
+  height: 3.5vh;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8em;
+  background: #7d7d7d;
+  border: 1px #7d7d7d solid;
+  border-top: none;
+}
+
 body, html {
   background: #f3f3f3;
   color: white;
@@ -276,7 +325,7 @@ section.container {
 
 .item__container {
   position: absolute;
-  z-index: 4;
+  z-index: 5;
   display: flex;
   flex-direction: column;
   overflow: auto;
@@ -349,6 +398,7 @@ section.container {
 .item2__text {
   width: 100%;
   font-size: 0.8em;
+  z-index: 5;
 }
 
 .item2__gradient {
@@ -370,8 +420,10 @@ section.container {
 }
 
 .itemcontainer1 {
+  position: relative;
   width: 100%;
   height: 100%;
+  z-index: 5;
   margin: 20% 0 0 0;
   display: flex;
   justify-content: center;
@@ -408,54 +460,6 @@ section.container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-footer.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 12vh;
-  width: 60%;
-}
-
-footer.container .container__item1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  color: #0c0b10;
-  border: 1px #7d7d7d solid;
-  background: #d7d7d7;
-  width: 100%;
-  height: 100%;
-}
-
-footer.container .container__item1_logo {
-  margin-left: 20%;
-}
-
-footer.container .container__item1_text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 100%;
-  width: 47.5%;
-  font-size: 0.75em;
-  margin-right: 1%;
-}
-
-footer.container .container__item2 {
-  display: flex;
-  width: 100%;
-  height: 3.5vh;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.8em;
-  background: #7d7d7d;
-  border: 1px #7d7d7d solid;
-  border-top: none;
 }
 
 .wrapper {
