--- a/style.scss
+++ b/style.scss
@@ -159,7 +159,7 @@ section.container {
 
         &__container {
             position: absolute;
-            z-index: 4;
+            z-index: 5;
             display: flex;
             flex-direction: column;
             overflow: auto;
@@ -233,6 +233,7 @@ section.container {
         &__text {
             width: 100%;
             font-size: 0.8em;
+            z-index: 5;
         }
 
         &__gradient {
@@ -254,8 +255,10 @@ section.container {
 }
 
 .itemcontainer1 {
+    position: relative;
     width: 100%;
     height: 100%;
+    z-index: 5;
 
     margin: 20% 0 0 0;
     display: flex;
@@ -294,58 +297,6 @@ section.container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-footer.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    height: 12vh;
-    width: 60%;
-
-    .container__item1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-
-        color: $Darker;
-        border: 1px $Gray2 solid; 
-        background: $lightGray;
-
-        width: 100%;
-        height: 100%;
-
-        &_logo {
-            margin-left: 20%;
-        }
-        &_text {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
-
-            height: 100%;
-            width: 47.5%;
-            font-size: 0.75em;
-            margin-right: 1%;
-        }
-    }
-    .container__item2 {
-        display: flex;
-        width: 100%;
-        height: 3.5vh;
-        justify-content: center;
-        align-items: center;
-
-        font-size: 0.8em;
-
-        background: $Gray2;
-        border: 1px $Gray2 solid; 
-        border-top: none;
-    }
 }
 
 .wrapper {
