--- a/style.scss
+++ b/style.scss
@@ -221,9 +221,9 @@ section.container {
     position: absolute;
     top: 10%;
     left: -6%;
-    width: 30%;
+    width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .mobile-wrapper {
