--- a/O firmie/style.css
+++ b/O firmie/style.css
@@ -39,7 +39,7 @@ nav .nav__text {
 
 #nav_logo {
   filter: opacity(1);
-  margin: 0 1rem 0 0;
+  margin: 0 1rem 0 -2.5rem;
   object-fit: contain;
 }
 
@@ -78,6 +78,10 @@ input.list__login:hover {
 input.list:hover {
   cursor: pointer;
   filter: opacity(0.7);
+}
+
+.list_form {
+  display: flex;
 }
 
 #icon {
