--- a/__variables.scss
+++ b/__variables.scss
@@ -53,7 +53,7 @@ nav {
 
 #nav_logo {
     filter: opacity(1);
-    margin: 0 1rem 0 0;
+    margin: 0 1rem 0 -2.5rem;
     object-fit: contain;
 
     &:hover {
@@ -97,6 +97,10 @@ input {
         //     outline-width: 5rem;
         // }
     }
+}
+
+.list_form {
+    display: flex;
 }
 
 #icon {
